# Cinder-Grfx

./: .clang-format  .gitmodules  CMakeLists.txt
include/cinder/app/: GrfxRenderer.h  RendererDx12.h  RendererVk.h
include/cinder/grfx/: Constants.h  Enums.h  HashMap.h  draw.h  grfx.h  grfx_config.h
include/cinder/vk/: Batch.h  Buffer.h  ChildObject.h  Command.h  Context.h  Descriptor.h  Device.h  DeviceChildObject.h  DeviceDispatchTable.h  Environment.h  GlslProg.h  HashKeys.h  HlslProg.h  Image.h  InstanceDispatchTable.h  Mesh.h  Pipeline.h  RenderPass.h  Sampler.h  ShaderProg.h  StockShaders.h  Swapchain.h  Sync.h  Texture.h  UniformBlock.h  UniformBuffer.h  Util.h  draw.h  scoped.h  vk.h  vk_config.h  wrapper.h
samples/: CMakeLists.txt
samples/_grfx/Cube/assets/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
samples/_grfx/Cube/proj/cmake/: CMakeLists.txt
samples/_grfx/Cube/src/: CubeApp.cpp
samples/_grfx/CubeHLSL/assets/: shader.frag.spv  shader.hlsl  shader.vert.spv
samples/_grfx/CubeHLSL/proj/cmake/: CMakeLists.txt
samples/_grfx/CubeHLSL/src/: CubeApp.cpp
samples/_grfx/CubeMapping/proj/cmake/: CMakeLists.txt
samples/_grfx/CubeMapping/src/: CubeMappingApp.cpp
samples/_grfx/NormalMapping/assets/: imgui.ini
samples/_grfx/NormalMapping/proj/cmake/: CMakeLists.txt
samples/_grfx/NormalMapping/src/: NormalMappingApp.cpp
samples/_grfx/NormalMapping/vc2019/Backup/: NormalMapping.sln
samples/_grfx/NormalMappingBasic/proj/cmake/: CMakeLists.txt
samples/_grfx/NormalMappingBasic/src/: NormalMappingBasicApp.cpp
samples/_grfx/NormalMappingBasic/vc2019/Backup/: NormalMappingBasic.sln
src/: CMakeLists.txt
src/cinder/app/: GrfxRenderer.cpp  RendererDx12.cpp  RendererVk.cpp
src/cinder/vk/: Batch.cpp  Buffer.cpp  ChildObject.cpp  Command.cpp  Context.cpp  Descriptor.cpp  Device.cpp  DeviceChildObject.cpp  DeviceDispatchTable.cpp  Environment.cpp  Image.cpp  InstanceDispatchTable.cpp  Mesh.cpp  Pipeline.cpp  RenderPass.cpp  Sampler.cpp  ShaderProg.cpp  StockShaders.cpp  Swapchain.cpp  Sync.cpp  Texture.cpp  UniformBlock.cpp  UniformBuffer.cpp  Util.cpp  draw.cpp  scoped.cpp  wrapper.cpp
